Fix but with menu being stuck upon load in Chrome.

--- a/app/less/components/lyric/lyric-column.less
+++ b/app/less/components/lyric/lyric-column.less
@@ -1,5 +1,8 @@
 .lyric-column {
     transition: height @animation-default;
+
+    // Keeps elements inside window!
+    overflow: hidden;
 }
 
 .is-song {
